Fix overflow (focus highlight issue)

--- a/app/css/forms.css
+++ b/app/css/forms.css
@@ -4,10 +4,6 @@
     }
 }
 
-.col-controls {
-    overflow: hidden;
-}
-
 .form-editable .control-label {
     cursor: move;
     cursor: grab;
